--- a/app/Resources/FOSUserBundle/translations/FOSUserBundle.lt.yml
+++ b/app/Resources/FOSUserBundle/translations/FOSUserBundle.lt.yml
@@ -52,7 +52,7 @@ resetting:
         subject: 'Slaptažodžio keitimas'
         message: "Sveiki %username%!\n\nNorėdami pakeisti savo slaptažodį, apsilankykite adresu %confirmationUrl%\n\nPagarbiai,\nKomanda.\n"
 layout:
-    logout: Atsijungti
+    logout: ATSIJUNGTI
     login: Prisijungti
     register: Registruotis
     logged_in_as: 'Prisijungęs kaip %username%'
